Profile BookingDetail screen commit

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,10 @@
     <color name="lightgrey"> #808080</color>
     <color name="blue">  #0096FF</color>
     <color name="light_white"> #fafafa</color>
+    <color name="grey92"> #ebebeb</color>
+    <color name="ghostwhite">  #f8f8ff</color>
+    <color name="red"> #FF0000</color>
+
 
 
 
